# feedback

./: .gitignore  .pylintrc  README.md  app.py  pyproject.toml
src/: app.py  app_test.py  constants.py  global_utils.py
src/models/: __init__.py  adhoc_models.py  creation_response.py  similarity_response.py  user_query.py
src/persistence/: __init__.py  base_model.py  card.py  cards_helper.py  point.py  points_helper.py
src/persistence/models/: base_model.py  card.py  point.py
src/prompts/: __init__.py  gemini_prompts.py
src/router/: application.py  llm_response.py
src/service/: llm_gemini.py  processor.py
src/vectors/: __init__.py  vector_store.py
