[tool.poetry]
name = "feedbackportal"
version = "0.1.0"
description = ""
authors = ["Manash Baul <mximpaid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.15"
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
